
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-05-03 DP  1.4.3  Use the correct encoding in the View Data filter options
                      per Ferenc.
2006-04-30 DP  1.6.0  Pre-encrypt passwords before sending them down the wire,
                      or displaying them in SQL statements.
2006-04-30 AP  1.6.0  Fix Explain issue with multiple lines [Miha Radej]
2006-04-30 AP  1.6.0  Scripting for view SELECT/INSERT/UPDATE
2006-04-30 AP  1.6.0  Scripting for table SELECT/INSERT/UPDATE
2006-04-30 AP  1.6.0  cleanup submenu handling to avoid touching events.cpp
                      when menus are added
2006-04-30 AP  1.6.0  Use virtual ListView for Query Tool, so no more retrieval time
2006-04-28 DP  1.4.3  Ensure the user is warned if files cannot be written.
2006-04-27 DP  1.6.0  Add an accelerator key (Delete) for deleting rows in the
                      edit grid, per Emil Nowak.
2006-04-25 DP  1.6.0  Add a 'Quick Report' option to the query tool to
                      dump query results through the reporting API.
2006-04-25 DP  1.6.0  Add an internal HTML reporting API and selection of
                      schema/object reports.
2006-04-21 DP  1.6.0  (pgAgent) Replace the batch job execution code for
                      Windows with a custom popen equivalent based on
                      CreateProcess(). This is needed on Win2K on which
                      _popen() will not work from a service.
2006-04-12 DP  1.6.0  Allow the tab character to be used as the clipboard
                      column separator to allow pasting of query results
                      straight into apps like Excel, or OOo Calc [Edward Di
                      Geronimo Jr.]