@@ -35,6 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-05-03 DP  1.6.0  Add support for PostgreSQL 8.2's CONNECT privilege on 
+                      databases, and USAGE on sequences (which also have a 
+                      reduced set of privileges now).
 2006-05-03 DP  1.4.3  Use the correct encoding in the View Data filter options
                       per Ferenc.
 2006-04-30 DP  1.6.0  Pre-encrypt passwords before sending them down the wire,
